[project]
name = "p2p-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiozmq>=1.0.0",
    "apscheduler>=3.11.0",
    "attrs>=24.2.0",
    "colorlog>=6.9.0",
    "msgpack>=1.1.0",
    "python-json-logger>=3.2.1",
    "uvloop>=0.21.0",
]
